--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Rock Paper Scissors</title>
         <script defer src="game.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
     <body>
     </body>
